Partners and Publishers

--- a/Startuply_HTML/index-clickthrough.html
+++ b/Startuply_HTML/index-clickthrough.html
@@ -45,55 +45,14 @@
 				<div class="navigation-navbar collapsed">
 					<ul class="navigation-bar navigation-bar-left">
 						<li><a href="#hero">Home</a></li>
-						<li><a href="#about">About</a></li>
-						<li><a href="#features">Features</a></li>
-						<li><a href="#product">Prices</a></li>
-						<li><a href="#feedback">Feedback</a></li>
-						<li><a href="#team">Team</a></li>
-						<li><a href="#guarantee">Contacts</a></li>
-						<li class="dropdown">
-							<a class="dropdown-toggle" href="#">Extra</a>
-							<ul class="dropdown-menu">
-								<li class="dropdown">
-									<a class="dropdown-toggle" href="#">Homepages</a>
-									<ul class="dropdown-menu">
-										<li><a href="index.html">Default</a></li>
-										<li><a href="index-clickthrough.html">Clickthrough</a></li>
-										<li><a href="index-color.html">Colored</a></li>
-										<li><a href="index-fast-register.html">Fast Registration</a></li>
-										<li><a href="index-promo.html">Promo</a></li>
-										<li><a href="index-waiting-list.html">Waiting List</a></li>
-										<li><a href="index-video.html">Video Background</a></li>
-										<li><a href="index-video-youtube.html">YouTube Embed</a></li>
-										<li><a href="index-video-vimeo.html">Vimeo Embed</a></li>
-									</ul>
-								</li>
-								<li class="dropdown">
-									<a class="dropdown-toggle" href="#">Blog</a>
-									<ul class="dropdown-menu">
-										<li><a href="blog.html">List</a></li>
-										<li><a href="blog-post.html">Post</a></li>
-									</ul>
-								</li>
-								<li class="dropdown">
-									<a class="dropdown-toggle" href="#">Ecommerce</a>
-									<ul class="dropdown-menu">
-										<li><a href="product-grid.html">Product Grid</a></li>
-										<li><a href="product-list.html">Product List</a></li>
-										<li><a href="product.html">Product Page</a></li>
-										<li><a href="cart-checkout.html">Cart checkout</a></li>
-										<li><a href="payment-confirm.html">Payment Confirmation</a></li>
-									</ul>
-								</li>
-								<li><a href="register.html">Registration</a></li>
-								<li><a href="forms.html">Forms</a></li>
-								<li><a href="shortcodes.html">Shortcodes</a></li>
-							</ul>
-						</li>
+						<li><a href="#about">Testimonials</a></li>
+						<li><a href="#features">Partners</a></li>
+						<li><a href="#product">Publishers</a></li>
+						<li><a href="#feedback">Team</a></li>
 					</ul>
 					<ul class="navigation-bar navigation-bar-right">
 						<li><a href="register.html">Login</a></li>
-						<li class="featured"><a class="btn btn-sm btn-outline-color" href="register.html">Sign up</a></li>
+						<li class="featured"><a class="btn btn-sm btn-outline-color" href="register.html">Book Demo</a></li>
 					</ul>
 				</div>
 			</div>
@@ -109,7 +68,7 @@
 					<p class="sub-title">more features, shortcodes,&nbsp;content with better design and new signup forms.<br>Validate ideas &amp;&nbsp;get you first&nbsp;users super fast!</p>
 				</div>
 				<div class="animated" data-animation="fadeInUp" data-duartion="500" data-delay="200">
-					<a href="#" class="btn btn-outline ">Get started</a><a href="#" class="btn btn-no-border ">Take tour</a>
+					<a href="#" class="btn btn-outline ">Book Demo</a>
 				</div>
 			</div>
 		</div>
@@ -118,11 +77,14 @@
 	<div id="clients" class="clients-section align-center">
 		<div class="container">
 			<ul class="list-inline logos">
-				<li><img class="animated" data-animation="fadeInDown" data-duration="500" src="assets/img/logos/logo-1.png" alt="mashable" /></li>
-				<li><img class="animated" data-animation="fadeInUp" data-duration="500" data-delay="200" src="assets/img/logos/logo-2.png" alt="tnw" /></li>
-				<li><img class="animated" data-animation="fadeInDown" data-duration="500" data-delay="400" src="assets/img/logos/logo-3.png" alt="virgin" /></li>
-				<li><img class="animated" data-animation="fadeInUp" data-duration="500" data-delay="600" src="assets/img/logos/logo-4.png" alt="microsoft" /></li>
-				<li><img class="animated" data-animation="fadeInDown" data-duration="500" data-delay="800" src="assets/img/logos/logo-5.png" alt="forbes" /></li>
+				<h5>Partners and Publishers</h5>
+				<li><img class="animated" data-animation="fadeInDown" data-duration="500" src="assets/img/logos/Bloomberg_logo.png" alt="Bloomberg" style="width: 100px; height: 50px;"/></li>
+				<li><img class="animated" data-animation="fadeInUp" data-duration="500" data-delay="200" src="assets/img/logos/business-insider-logo.png" alt="Business-Insider" style="width: 100px; height: 50px;"/></li>
+				<li><img class="animated" data-animation="fadeInDown" data-duration="500" data-delay="400" src="assets/img/logos/envestnet-logo.png" alt="Envestnet" style="width: 100px; height: 50px;"/></li>
+				<li><img class="animated" data-animation="fadeInUp" data-duration="500" data-delay="600" src="assets/img/logos/Forbes_logo.svg.png" alt="Forbes" style="width: 100px; height: 50px;"/></li>
+				<li><img class="animated" data-animation="fadeInDown" data-duration="500" data-delay="800" src="assets/img/logos/Investopedia_logo.png" alt="Investopedia" style="width: 100px; height: 50px;"/></li>
+				<li><img class="animated" data-animation="fadeInUp" data-duration="500" data-delay="1000" src="assets/img/logos/new_york_times_logo.jpg" alt="New York Times" style="width: 100px; height: 50px;"/></li>
+				<li><img class="animated" data-animation="fadeInDown" data-duration="500" data-delay="800" src="assets/img/logos/Reuters_logo.png" alt="Reuters" style="width: 100px; height: 50px;"/></li>
 			</ul>
 		</div>
 	</div>
