start of tuesday

--- a/Startuply_HTML/index-clickthrough.html
+++ b/Startuply_HTML/index-clickthrough.html
@@ -91,7 +91,7 @@
 	</div>
 
 
-
+<!-----------------------  CANT USE THESE PHOTOS --  NEED TO GET STOCK IMAGES  -------------------------------------->
 	<section id="testimonials" class="section process-section align-center dark-text">
 		<div class="container">
 			<div class="section-content row">
@@ -172,6 +172,10 @@
 		</div>
 	</section>
 
+
+    <!----------------------------  WHAT PAGES APPLY TO WHAT IMAGE
+                                    CAPTIONS NEEDED
+    ----------------------------------------->
     <section id="features" class="section features-section align-center inverted">
         <div class="row">
             <div class="container">
@@ -254,80 +258,13 @@
                                 <h6> HERE IS THE DESCRIPTION5</h6>
                             </div>
                         </div>
-
                     </div>
                 </div>
-                <br><br>
             </div>
         </div>
     </section>
 
-	<section id="publishers" class="section features-list-section align-center dark-text">
-		<div class="container">
-			<div class="clearfix animated" data-duration="500" data-animation="fadeInRight">
-				<div class="col-md-3 col-sm-6 col-xs-12">
-					<article class="align-center">
-						<i class="icon icon-office-44 highlight"></i>
-						<span class="heading">FEATURE 1</span>
-						<p class="">Sit amet, consectetur adipiscing elit. In hac divisione rem ipsam prorsus probo elegantiam desidero. </p>
-					</article>
-				</div>
-				<div class="col-md-3 col-sm-6 col-xs-12">
-					<article class="align-center">
-						<i class="icon icon-shopping-18 highlight"></i>
-						<span class="heading">FEATURE 2</span>
-						<p class="">Sit amet, consectetur adipiscing elit. In hac divisione rem ipsam prorsus probo elegantiam desidero. </p>
-					</article>
-				</div>
-				<div class="col-md-3 col-sm-6 col-xs-12">
-					<article class="align-center">
-						<i class="icon icon-seo-icons-27 highlight"></i>
-						<span class="heading">FEATURE 3</span>
-						<p class="">Sit amet, consectetur adipiscing elit. In hac divisione rem ipsam prorsus probo elegantiam desidero. </p>
-					</article>
-				</div>
-				<div class="col-md-3 col-sm-6 col-xs-12">
-					<article class="align-center">
-						<i class="icon icon-office-24 highlight"></i>
-						<span class="heading">FEATURE 4</span>
-						<p class="">Sit amet, consectetur adipiscing elit. In hac divisione rem ipsam prorsus probo elegantiam desidero. </p>
-					</article>
-				</div>
-			</div>
-			<div class="clearfix animated" data-duration="500" data-delay="500" data-animation="fadeInLeft">
-				<div class="col-md-3 col-sm-6 col-xs-12">
-					<article class="align-center">
-						<i class="icon icon-graphic-design-13 highlight"></i>
-						<span class="heading">FEATURE 5</span>
-						<p class="">Sit amet, consectetur adipiscing elit. In hac divisione rem ipsam prorsus probo elegantiam desidero. </p>
-					</article>
-				</div>
-				<div class="col-md-3 col-sm-6 col-xs-12">
-					<article class="align-center">
-						<i class="icon icon-arrows-37 highlight"></i>
-						<span class="heading">FEATURE 6</span>
-						<p class="">Sit amet, consectetur adipiscing elit. In hac divisione rem ipsam prorsus probo elegantiam desidero. </p>
-					</article>
-				</div>
-				<div class="col-md-3 col-sm-6 col-xs-12">
-					<article class="align-center">
-						<i class="icon icon-badges-votes-14 highlight"></i>
-						<span class="heading">FEATURE 7</span>
-						<p class="">Sit amet, consectetur adipiscing elit. In hac divisione rem ipsam prorsus probo elegantiam desidero. </p>
-					</article>
-				</div>
-				<div class="col-md-3 col-sm-6 col-xs-12">
-					<article class="align-center">
-						<i class="icon icon-badges-votes-16 highlight"></i>
-						<span class="heading">FEATURE 8</span>
-						<p class="">Sit amet, consectetur adipiscing elit. In hac divisione rem ipsam prorsus probo elegantiam desidero. </p>
-					</article>
-				</div>
-			</div>
-		</div>
-	</section>
-
-	<section id="guarantee" class="long-block light-text guarantee-section">
+	<section id="guarantee" class="long-block light-text guarantee-section" style="margin-top: -50px;">
 		<div class="container">
 			<div class="col-md-12 col-lg-9">
 				<article class="pull-left">
@@ -341,8 +278,7 @@
             </div>
 		</div>
 	</section>
-
-
+<!--------------------------------------- NEED TO FILL IN TEAM CONTENT -------------------------------------------------->
     <section id="team" class="section team-section align-center dark-text">
         <div class="container">
             <div class="section-header">
@@ -562,7 +498,7 @@
 					<div class="logo-wrapper">
 						<img width="130" height="31" src="assets/img/logos/AS_logo.png" alt="logo" />
 					</div>
-					<p>We help Independent Financial advisors generate new leads, grow assets and save money by providing them with awesome tools.</p>
+					<p>We help Independent Financial Advisors generate new leads, grow assets and save money by providing them with awesome tools.</p>
 				</div>
 				<div class="col-sm-5 social-wrap col-xs-12">
 					<strong class="heading">Social Networks</strong>
