--- a/Startuply_HTML/index-clickthrough.html
+++ b/Startuply_HTML/index-clickthrough.html
@@ -27,9 +27,9 @@
 	<div class="preloader-mask">
 		<div class="preloader"><div class="spin base_clr_brd"><div class="clip left"><div class="circle"></div></div><div class="gap"><div class="circle"></div></div><div class="clip right"><div class="circle"></div></div></div></div>
 	</div>
-
 	<!-- Header -->
 	<header>
+
 		<nav class="navigation navigation-header">
 			<div class="container">
 				<div class="navigation-brand">
@@ -52,7 +52,7 @@
 					</ul>
 					<ul class="navigation-bar navigation-bar-right">
 						<li><a href="register.html">Login</a></li>
-						<li class="featured"><a class="btn btn-sm btn-outline-color" href="register.html">Book Demo</a></li>
+						<li class="featured"><a class="btn btn-sm btn-outline-color">Book Demo</a></li>
 					</ul>
 				</div>
 			</div>
@@ -78,14 +78,14 @@
 		<div class="container">
 			<ul class="list-inline logos">
 				<h5>Partners and Publishers</h5>
-				<li><img class="animated" data-animation="fadeInDown" data-duration="500" src="assets/img/logos/Bloomberg_logo.png" alt="Bloomberg" style="width: 155px; height: 35px;"/></li>
+				<li><img class="animated" data-animation="fadeInDown" data-duration="500" src="assets/img/logos/Bloomberg_logo.png" alt="Bloomberg" style="width: 155px; height: 35px; margin-bottom: 10px;"/></li>
 				<li><img class="animated" data-animation="fadeInUp" data-duration="500" data-delay="200" src="assets/img/logos/business-insider-logo.png" alt="Business-Insider" style="width: 80px; height: 50px;"/></li>
 				<li><img class="animated" data-animation="fadeInDown" data-duration="500" data-delay="400" src="assets/img/logos/envestnet-logo.png" alt="Envestnet" style="width: 130px; height: 50px;"/></li>
 				<li><img class="animated" data-animation="fadeInUp" data-duration="500" data-delay="600" src="assets/img/logos/Forbes_logo.svg.png" alt="Forbes"
                          style="width: 90px; height: 38px; padding-bottom: 10px;"/></li>
-				<li><img class="animated" data-animation="fadeInDown" data-duration="500" data-delay="800" src="assets/img/logos/Investopedia_logo.png" alt="Investopedia" style="width: 130px; height: 40px;"/></li>
+				<li><img class="animated" data-animation="fadeInDown" data-duration="500" data-delay="800" src="assets/img/logos/Investopedia_logo.png" alt="Investopedia" style="width: 140px; height: 30px; margin-bottom: 8px;"/></li>
 				<li><img class="animated" data-animation="fadeInUp" data-duration="500" data-delay="1000" src="assets/img/logos/new_york_times_logo.jpg" alt="New York Times" style="width: 60px; height: 50px;"/></li>
-				<li><img class="animated" data-animation="fadeInDown" data-duration="500" data-delay="800" src="assets/img/logos/Reuters_logo.png" alt="Reuters" style="width: 125px; height: 45px;"/></li>
+				<li><img class="animated" data-animation="fadeInDown" data-duration="500" data-delay="800" src="assets/img/logos/Reuters_logo.png" alt="Reuters" style="width: 125px; height: 35px; margin-bottom: 10px;"/></li>
 			</ul>
 		</div>
 	</div>
@@ -107,7 +107,7 @@
 							Over the past 6 months I have gotten 7 new referrals which has led to 50k in profits.</h6>
 						<p class="sub-title"><em>-John Smith, Independent Financial Advisor</em></p>
 						<br>
-						<a href="#" class="btn btn-outline-color">Book Demo</a>
+						<a class="btn btn-outline-color">Book Demo</a>
 					</article>
 				</div>
 
@@ -165,13 +165,12 @@
 						 </h6>
 						<p class="sub-title"><em>-Joel Acosta, Firm</em></p>
 						<br>
-						<a href="#" class="btn btn-outline-color">Book Demo</a>
+						<a class="btn btn-outline-color">Book Demo</a>
 					</article>
 				</div>
 			</div>
 		</div>
 	</section>
-
 
     <!----------------------------  WHAT PAGES APPLY TO WHAT IMAGE
                                     CAPTIONS NEEDED
@@ -274,77 +273,65 @@
 				<div class="col-md-3 col-sm-6 col-xs-12">
 					<article class="align-center">
 						<img src="assets/img/Clients/ALLSTATE.png" alt="Allstate" style="width: 160px; height: 100px;"/>
-						<span class="heading">Allstate</span>
 					</article>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12">
 					<article class="align-center">
 						<img src="assets/img/Clients/ameriprise-finanical.png" alt="Emeriprise" style="width: 100px; height: 100px;"/>
-						<span class="heading">Ameriprise Financial</span>
 					</article>
 				</div>
-				<div class="col-md-3 col-sm-6 col-xs-12">
+                <div class="col-md-3 col-sm-6 col-xs-12">
 					<article class="align-center">
-						<img src="assets/img/Clients/Argosy-Securities.png" alt="Argosy" style="width: 100px; height: 100px;"/>
-						<span class="heading">Argosy Securities</span>
+                        <img src="assets/img/Clients/Scotia.jpg" alt="Scoita" style="width: 100px; height: 100px;"/>
 					</article>
 				</div>
-				<div class="col-md-3 col-sm-6 col-xs-12">
+                <div class="col-md-3 col-sm-6 col-xs-12">
 					<article class="align-center">
-						<img src="assets/img/Clients/Avisen_Securities_Inc.jpg" alt="Avisen" style="width: 100px; height: 100px;"/>
-						<span class="heading">Avisen Securities</span>
+                        <img src="assets/img/Clients/SEI.png" alt="SEI" style="width: 100px; height: 100px;"/>
 					</article>
 				</div>
 			</div>
 			<div class="clearfix animated" data-duration="500" data-animation="fadeInLeft">
-				<div class="col-md-3 col-sm-6 col-xs-12">
+                <div class="col-md-3 col-sm-6 col-xs-12">
 					<article class="align-center">
-                        <img src="assets/img/Clients/Axis_Advisors.png" alt="Axis" style="width: 170px; height: 60px; margin-top: 20px; margin-bottom: 20px;"/>
-						<span class="heading">Axis Advisors</span>
+                        <img src="assets/img/Clients/TD.png" alt="TD" style="width: 100px; height: 100px;"/>
 					</article>
 				</div>
-				<div class="col-md-3 col-sm-6 col-xs-12">
+				 <div class="col-md-3 col-sm-6 col-xs-12">
 					<article class="align-center">
-						<img src="assets/img/Clients/BluePrint-Asset-Management.png" alt="Blueprint" style="width: 170px; height: 170px; margin-top: -40px; margin-bottom: -30px;"/>
-						<span class="heading">Blueprint Asset Management</span>
+                        <img src="assets/img/Clients/New-York-Life.png" alt="New York Life" style="width: 100px; height: 100px;"/>
 					</article>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12">
 					<article class="align-center">
                         <img src="assets/img/Clients/Common-Wealth-Financial.jpg" alt="Commonwealth" style="width: 100px; height: 100px;"/>
-						<span class="heading">Commonwealth Financial Group</span>
 					</article>
 				</div>
-				<div class="col-md-3 col-sm-6 col-xs-12">
+                <div class="col-md-3 col-sm-6 col-xs-12">
 					<article class="align-center">
-                        <img src="assets/img/Clients/Cornerstone.jpg" alt="Cornerston" style="width: 170px; height: 60px; margin-top: 20px; margin-bottom: 20px;"/>
-						<span class="heading">Cornerstone Wealth Management</span>
+                        <img src="assets/img/Clients/National-Bank.png" alt="National-Bank" style="width: 100px; height: 100px;"/>
 					</article>
 				</div>
             </div>
             <div class="clearfix animated" data-duration="500" data-animation="fadeInRight">
                 <div class="col-md-3 col-sm-6 col-xs-12">
 					<article class="align-center">
-                        <img src="assets/img/Clients/Foresters-Financial.png" alt="Foresters" style="width: 100px; height: 100px;"/>
-						<span class="heading">Foresters Financial</span>
+                        <img src="assets/img/Clients/Mandeville-Private-Client.png" alt="Mandeville" style="width: 100px; height: 100px;"/>
 					</article>
 				</div>
                 <div class="col-md-3 col-sm-6 col-xs-12">
 					<article class="align-center">
                         <img src="assets/img/Clients/freedom-55-financial.png" alt="Freedom55" style="width: 100px; height: 100px;"/>
-						<span class="heading">Freedom 55 Financial</span>
 					</article>
 				</div>
-                <div class="col-md-3 col-sm-6 col-xs-12">
+                 <div class="col-md-3 col-sm-6 col-xs-12">
 					<article class="align-center">
-                        <img src="assets/img/Clients/grow-your-wealth-financial.jpg" alt="Grow Your Wealth" style="width: 150px; height: 60px; margin-top: 20px; margin-bottom: 20px;"/>
-						<span class="heading">Grow Your Wealth</span>
+                        <img src="assets/img/Clients/mass-mutual.png" alt="Mass Mutual" style="width: 100px; height: 100px;"/>
 					</article>
 				</div>
                 <div class="col-md-3 col-sm-6 col-xs-12">
 					<article class="align-center">
                         <img src="assets/img/Clients/Horizon-Financial.png" alt="Horizon" style="width: 150px; height: 60px; margin-top: 20px; margin-bottom: 20px;"/>
-						<span class="heading">Horizon Financial Group</span>
 					</article>
 				</div>
             </div>
@@ -352,25 +339,21 @@
                 <div class="col-md-3 col-sm-6 col-xs-12">
 					<article class="align-center">
                         <img src="assets/img/Clients/IndustrialAliance.png" alt="Industrial Alliance" style="width: 130px; height: 80px; margin-top: 10px; margin-bottom: 10px;"/>
-						<span class="heading">Industrial Alliance</span>
 					</article>
 				</div>
                 <div class="col-md-3 col-sm-6 col-xs-12">
 					<article class="align-center">
-                        <img src="assets/img/Clients/IPC.gif" alt="IPC" style="width: 160px; height: 80px; margin-top: 10px; margin-bottom: 10px;"/>
-						<span class="heading">IPC Securities Group</span>
+                        <img src="assets/img/Clients/Primerica.png" alt="Primerica" style="width: 100px; height: 100px;"/>
 					</article>
 				</div>
                 <div class="col-md-3 col-sm-6 col-xs-12">
 					<article class="align-center">
                         <img src="assets/img/Clients/ipl.png" alt="IPL" style="width: 160px; height: 30px; margin-bottom: 35px; margin-top: 35px"/>
-						<span class="heading">IPL</span>
 					</article>
 				</div>
                 <div class="col-md-3 col-sm-6 col-xs-12">
 					<article class="align-center">
-                        <img src="assets/img/Clients/ISPlus-Financial.jpg" alt="ISPlus" style="width: 160px; height: 100px;"/>
-						<span class="heading">ISPlus Financial</span>
+                        <img src="assets/img/Clients/United-Advisors.png" alt="United" style="width: 100px; height: 100px;"/>
 					</article>
 				</div>
             </div>
@@ -378,51 +361,43 @@
                 <div class="col-md-3 col-sm-6 col-xs-12">
 					<article class="align-center">
                         <img src="assets/img/Clients/Landolt-Securities.jpg" alt="Landold" style="width: 170px; height: 100px;"/>
-						<span class="heading">Landolt Securities</span>
 					</article>
 				</div>
                 <div class="col-md-3 col-sm-6 col-xs-12">
 					<article class="align-center">
-                        <img src="assets/img/Clients/Mandeville-Private-Client.png" alt="Mandeville" style="width: 100px; height: 100px;"/>
-						<span class="heading">Mandeville Private Client</span>
+                        <img src="assets/img/Clients/Foresters-Financial.png" alt="Foresters" style="width: 100px; height: 100px;"/>
+					</article>
+				</div>
+                  <div class="col-md-3 col-sm-6 col-xs-12">
+					<article class="align-center">
+                        <img src="assets/img/Clients/grow-your-wealth-financial.jpg" alt="Grow Your Wealth" style="width: 150px; height: 60px; margin-top: 20px; margin-bottom: 20px;"/>
 					</article>
 				</div>
                 <div class="col-md-3 col-sm-6 col-xs-12">
 					<article class="align-center">
-                        <img src="assets/img/Clients/mass-mutual.png" alt="Mass Mutual" style="width: 100px; height: 100px;"/>
-						<span class="heading">Mass Mutual</span>
-					</article>
-				</div>
-                <div class="col-md-3 col-sm-6 col-xs-12">
-					<article class="align-center">
-                        <img src="assets/img/Clients/National-Bank.png" alt="National-Bank" style="width: 100px; height: 100px;"/>
-						<span class="heading">National Bank</span>
+                        <img src="assets/img/Clients/Cornerstone.jpg" alt="Cornerston" style="width: 170px; height: 60px; margin-top: 20px; margin-bottom: 20px;"/>
 					</article>
 				</div>
             </div>
             <div class="clearfix animated" data-duration="500" data-animation="fadeInLeft">
                 <div class="col-md-3 col-sm-6 col-xs-12">
 					<article class="align-center">
-                        <img src="assets/img/Clients/New-York-Life.png" alt="New York Life" style="width: 100px; height: 100px;"/>
-						<span class="heading">New York Life</span>
+						<img src="assets/img/Clients/BluePrint-Asset-Management.png" alt="Blueprint" style="width: 170px; height: 170px; margin-top: -40px; margin-bottom: -30px;"/>
 					</article>
 				</div>
                 <div class="col-md-3 col-sm-6 col-xs-12">
 					<article class="align-center">
                         <img src="assets/img/Clients/Olympic.jpg" alt="Olympic" style="width: 100px; height: 100px;"/>
-						<span class="heading">Olympic Golden Retirements</span>
 					</article>
 				</div>
                 <div class="col-md-3 col-sm-6 col-xs-12">
 					<article class="align-center">
-                        <img src="assets/img/Clients/Primerica.png" alt="Primerica" style="width: 100px; height: 100px;"/>
-						<span class="heading">Primerica</span>
+                        <img src="assets/img/Clients/IPC.gif" alt="IPC" style="width: 160px; height: 80px; margin-top: 10px; margin-bottom: 10px;"/>
 					</article>
 				</div>
                 <div class="col-md-3 col-sm-6 col-xs-12">
 					<article class="align-center">
                         <img src="assets/img/Clients/River-Wealth-Management.png" alt="River-Wealth" style="width: 150px; height: 60px; margin-top: 20px; margin-bottom: 20px;"/>
-						<span class="heading">River Wealth Management</span>
 					</article>
 				</div>
             </div>
@@ -430,48 +405,44 @@
                 <div class="col-md-3 col-sm-6 col-xs-12">
 					<article class="align-center">
                         <img src="assets/img/Clients/Safety-First.png" alt="Safety First" style="width: 100px; height: 100px;"/>
-						<span class="heading">Safety Fist</span>
 					</article>
 				</div>
                 <div class="col-md-3 col-sm-6 col-xs-12">
 					<article class="align-center">
-                        <img src="assets/img/Clients/Scotia.jpg" alt="Scoita" style="width: 100px; height: 100px;"/>
-						<span class="heading">Scotia Wealth</span>
+						<img src="assets/img/Clients/Argosy-Securities.png" alt="Argosy" style="width: 100px; height: 100px;"/>
+					</article>
+				</div>
+				<div class="col-md-3 col-sm-6 col-xs-12">
+					<article class="align-center">
+						<img src="assets/img/Clients/Avisen_Securities_Inc.jpg" alt="Avisen" style="width: 100px; height: 100px;"/>
 					</article>
 				</div>
                 <div class="col-md-3 col-sm-6 col-xs-12">
 					<article class="align-center">
-                        <img src="assets/img/Clients/SEI.png" alt="SEI" style="width: 100px; height: 100px;"/>
-						<span class="heading">SEI</span>
-					</article>
-				</div>
-                <div class="col-md-3 col-sm-6 col-xs-12">
-					<article class="align-center">
-                        <img src="assets/img/Clients/TD.png" alt="TD" style="width: 100px; height: 100px;"/>
-						<span class="heading">TD</span>
+                        <img src="assets/img/Clients/Axis_Advisors.png" alt="Axis" style="width: 170px; height: 60px; margin-top: 20px; margin-bottom: 20px;"/>
 					</article>
 				</div>
             </div>
             <div class="clearfix animated" data-duration="500" data-animation="fadeInLeft">
                 <div class="col-md-3 col-sm-6 col-xs-12">
 					<article class="align-center">
-                        <img src="assets/img/Clients/United-Advisors.png" alt="United" style="width: 100px; height: 100px;"/>
-						<span class="heading">United Advisors</span>
+                        <img src="assets/img/Clients/ISPlus-Financial.jpg" alt="ISPlus" style="width: 160px; height: 100px;"/>
 					</article>
 				</div>
                 <div class="col-md-3 col-sm-6 col-xs-12">
 					<article class="align-center">
                         <img src="assets/img/Clients/Vision-Solved-Wealth-Management.jpg" alt="Vision" style="width: 100px; height: 100px;"/>
-						<span class="heading">Vision Solved Wealth Management</span>
 					</article>
 				</div>
                 <div class="col-md-3 col-sm-6 col-xs-12">
 					<article class="align-center">
                         <img src="assets/img/Clients/Wise-Money-Strategy.png" alt="Wise Money" style="width: 140px; height: 100px;"/>
-						<span class="heading">Wise Money Strategies</span>
 					</article>
 				</div>
 			</div>
+            <div class="section-footer">
+                <p class="sub-header">And many more</p>
+            </div>
 		</div>
 	</section>
 
