--- a/Startuply_HTML/index-clickthrough.html
+++ b/Startuply_HTML/index-clickthrough.html
@@ -20,6 +20,13 @@
 		<script src="assets/js/html5shiv.js"></script>
 		<script src="assets/js/respond.min.js"></script>
 	<![endif]-->
+
+	<!-- Calendly badge widget begin -->
+	<link href="https://calendly.com/assets/external/widget.css" rel="stylesheet">
+	<script src="https://calendly.com/assets/external/widget.js" type="text/javascript"></script>
+	<script type="text/javascript">Calendly.showBadgeWidget({url: 'https://calendly.com/jake-13', text: 'Book Demo', color: '#5b2883', branding: false});</script>
+	<!-- Calendly badge widget end -->
+
 </head>
 
 <body id="landing-page" class="landing-page">
@@ -51,8 +58,90 @@
 						<li><a href="#team">Team</a></li>
 					</ul>
 					<ul class="navigation-bar navigation-bar-right">
-						<li><a href="register.html">Login</a></li>
-						<li class="featured"><a class="btn btn-sm btn-outline-color">Book Demo</a></li>
+						<li class="dropdown" id="login">
+							<a class="dropdown-toggle" href="#" data-toggle="dropdown" id="navLogin" aria-expanded="true">Login</a>
+							<div id="innerdropdownform" class="dropdown-menu pull-right wider-dropdown-form dropdown-overflow-scroll">
+								<div id="loginbox" sytle="margin-top:20px"; class="mainbox col-md-12">
+									<div class="panel panel-info">
+										<div class="panel-heading">
+											<div class="panel-title">Sign In</div>
+										</div>
+										<div class="panel-body">
+											<div style="display:none" id="login-alert" class="alert alert-danger col-xs-12"></div>
+											<form id="loginform" class="form-horizontal login" role="form" method="post" action="/accoutns/login/">
+												<div class="col-xs-12">
+													<div class="form-group">
+														<label class="control-label" for="id_login">Username</label>
+														<div>
+															<input autofocus="autofocus" class="form-control" id="id_login" maxlength="30"
+																   name="login" placeholder="Username" type="text"/>
+														</div>
+													</div>
+													<div class="form-group">
+														<label class="control-label" for="id_password">Password</label>
+														<div>
+															<input class="form-control" id="id_password" name="password" placeholder="Password" type="password">
+														</div>
+													</div>
+													<div class="form-group">
+														<div class="checkbox">
+															<label>
+																<input id="id_remember" name="remember" type="checkbox">
+																<span>Remember Me</span>
+															</label>
+														</div>
+													</div>
+												</div>
+												<div class="links" style="float:right; font-size:80%; position: relative; top: -2.8em">
+													<a href="/accounts/password/reset">Forgot Password?</a>
+												</div>
+												<div style="margin-top: 10px;" class="form-group">
+													<div class="col-xs-12">
+														<button class="primaryAction btn splash-btn btn-block btn-success splash-btn-success" type="submit">
+															Sign In
+														</button>
+													</div>
+												</div>
+												<div class="socialaccount_ballot">
+													<ul class="socialaccount_providers" sytle="display:table; margin-left:auto; margin-right:auto; padding-left: 0px">
+														<li style="margin: 1em">
+															<a title="LinkedIn" class="socialaccount_provider linkedin_oauth2 btn btn-block btn-social btn-linkedin splash-btn
+															splash-btn-social" href="/accounts/linkedin_oauth2/login/?process=login">
+																<i class="fa fa-linkedin"></i>LinkedIn
+															</a>
+														</li>
+														<li style="margin: 1em">
+															<a title="Facebook" class="socialaccount_provider facebook btn btn-block btn-social btn-facebook
+															splash-btn splash-btn-social" href="javascript: ">
+																<i class="fa fa-facebook"></i>
+																Facebook
+															</a>
+														</li>
+														<li style="margin: 1em">
+															<a title="Twitter" class="socialaccount_provider twitter btn btn-block btn-social
+															btn-twitter splash-btn splash-btn-social" href="/accounts/twitter/login/?process=login">
+																<i class="fa fa-twitter">
+																</i>
+																Twitter
+															</a>
+														</li>
+													</ul>
+												</div>
+												<div class="form-group">
+													<div class="col-xs-12 control">
+														<div class="links black-text-forms" style="border-top: 1px solid#888; padding-top: 15px; font-size:85%;">
+															Don't have an account!
+															<a href="/accounts/signup/">Sign Up Here</a>
+														</div>
+													</div>
+												</div>
+											</form>
+										</div>
+									</div>
+								</div>
+							</div>
+						</li>
+						<li class="featured"><a onClick="Calendly.showPopupWidget('https://calendly.com/jake-13'); return false;" class="btn btn-sm btn-outline-color">Book Demo</a></li>
 					</ul>
 				</div>
 			</div>
@@ -68,7 +157,7 @@
 					<p class="sub-title">more features, shortcodes,&nbsp;content with better design and new signup forms.<br>Validate ideas &amp;&nbsp;get you first&nbsp;users super fast!</p>
 				</div>
 				<div class="animated" data-animation="fadeInUp" data-duartion="500" data-delay="200">
-					<a href="#" class="btn btn-outline">Book Demo</a>
+					<a onClick="Calendly.showPopupWidget('https://calendly.com/jake-13'); return false;" class="btn btn-outline">Book Demo</a>
 				</div>
 			</div>
 		</div>
@@ -107,7 +196,7 @@
 							Over the past 6 months I have gotten 7 new referrals which has led to 50k in profits.</h6>
 						<p class="sub-title"><em>-John Smith, Independent Financial Advisor</em></p>
 						<br>
-						<a class="btn btn-outline-color">Book Demo</a>
+						<a onClick="Calendly.showPopupWidget('https://calendly.com/jake-13'); return false;" class="btn btn-outline-color">Book Demo</a>
 					</article>
 				</div>
 
@@ -128,7 +217,7 @@
 						 </h6>
 						<p class="sub-title"><em>-Mary Street, Financial Advisor</em></p>
 						<br>
-						<a href="#" class="btn btn-outline-color">Book Demo</a>
+						<a onClick="Calendly.showPopupWidget('https://calendly.com/jake-13'); return false;" class="btn btn-outline-color">Book Demo</a>
 					</article>
 				</div>
 
@@ -145,7 +234,7 @@
 						This saves me time and money, allowing me to focus on closing new leads.</h6>
 						<p class="sub-title"><em>-Mike Gill, Financial Advisor</em></p>
 						<br>
-						<a href="#" class="btn btn-outline-color">Book Demo</a>
+						<a onClick="Calendly.showPopupWidget('https://calendly.com/jake-13'); return false;" class="btn btn-outline-color">Book Demo</a>
 					</article>
 				</div>
 
@@ -165,7 +254,7 @@
 						 </h6>
 						<p class="sub-title"><em>-Joel Acosta, Firm</em></p>
 						<br>
-						<a class="btn btn-outline-color">Book Demo</a>
+						<a onClick="Calendly.showPopupWidget('https://calendly.com/jake-13'); return false;" class="btn btn-outline-color">Book Demo</a>
 					</article>
 				</div>
 			</div>
@@ -441,7 +530,7 @@
 				</div>
 			</div>
             <div class="section-footer">
-                <p class="sub-header">And many more</p>
+                <p class="sub-header">And Many More</p>
             </div>
 		</div>
 	</section>
@@ -453,12 +542,12 @@
 			<div class="col-md-9 col-lg-9">
 				<article class="pull-left">
 					<h3> Give us 30 days. We'll get you new leads</h3>
-					<p class="thin">One of our experts will contact you within 48 hours.  We do not sell your information.  We will only send you relevan information for your demo.</p>
+					<p class="thin">One of our experts will contact you within 48 hours.  We do not sell your information.  We will only send you relevant information for your demo.</p>
 				</article>
 			</div>
 
             <div class="col-md-3 col-lg-3">
-					<a href="#" class="btn btn-outline" style="margin-top: 7px;">Book Demo</a>
+				<a onClick="Calendly.showPopupWidget('https://calendly.com/jake-13'); return false;" class="btn btn-outline" style="margin-top: 7px;">Book Demo</a>
             </div>
 		</div>
 	</section>
@@ -481,11 +570,14 @@
                         <div class="team-member">
                             <div class="photo-wrapper">
                                 <div class="overlay-wrapper">
-                                    <img src="assets/img/people/team-1.jpg" alt="">
+                                    <img src="assets/img/team/kevin2_0.jpg" alt="Kevin">
                                     <div class="overlay-content">
                                         <div class="text-wrapper">
                                             <div class="text-container">
-                                                <p>Mike has worked with CARE USA, for 12 years holding positions such as Deputy Country Director to Director of Programs and Information Systems.</p>
+												<p>15 years of financial industry experience.
+													Helped launched Clientinsights.ca with Dan Richards.
+													Head of project management for Richardson Partners Financial.
+													In 2007, led a start up in Japan, focused on the online learning space.</p>
                                             </div>
                                         </div>
                                     </div>
@@ -500,18 +592,19 @@
                         <div class="team-member">
                             <div class="photo-wrapper">
                                 <div class="overlay-wrapper">
-                                    <img src="assets/img/people/team-2.jpg" alt="">
+                                    <img src="assets/img/team/Martin_0.jpg" alt="Martin">
                                     <div class="overlay-content">
                                         <div class="text-wrapper">
                                             <div class="text-container">
-                                                <p>Mike has worked with CARE USA, for 12 years holding positions such as Deputy Country Director to Director of Programs and Information Systems.</p>
+                                                <p>15 years software design and development, including 7 years in financial services.
+												</p>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                            <h5 class="name">Bryan</h5>
-                            <p class="position">Developer</p>
+                            <h5 class="name">Martin Hill</h5>
+                            <p class="position">CTO</p>
                         </div>
                     </div>
 
@@ -578,7 +671,7 @@
                         <div class="team-member">
                             <div class="photo-wrapper">
                                 <div class="overlay-wrapper">
-                                    <img src="assets/img/people/team-2.jpg" alt="">
+                                    <img src="assets/img/team/Bryan.jpg" alt="Bryan">
                                     <div class="overlay-content">
                                         <div class="text-wrapper">
                                             <div class="text-container">
@@ -588,8 +681,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <h5 class="name">Martin</h5>
-                            <p class="position">Developer</p>
+                            <h5 class="name">Bryan Muir</h5>
+                            <p class="position">Sales, Client Success</p>
                         </div>
                     </div>
 
