commit for merge

--- a/Startuply_HTML/index-clickthrough.html
+++ b/Startuply_HTML/index-clickthrough.html
@@ -196,7 +196,7 @@
 							Over the past 6 months I have gotten 7 new referrals which has led to 50k in profits.</h6>
 						<p class="sub-title"><em>-John Smith, Independent Financial Advisor</em></p>
 						<br>
-						<a onClick="Calendly.showPopupWidget('https://calendly.com/jake-13'); return false;" class="btn btn-outline-color">Book Demo</a>
+						<a onClick="Calendly.showPopupWidget('https://calendly.com/advisor-stream-demo-team'); return false;" class="btn btn-outline-color">Book Demo</a>
 					</article>
 				</div>
 
