--- a/Startuply_HTML/index-clickthrough.html
+++ b/Startuply_HTML/index-clickthrough.html
@@ -24,7 +24,7 @@
 	<!-- Calendly badge widget begin -->
 	<link href="https://calendly.com/assets/external/widget.css" rel="stylesheet">
 	<script src="https://calendly.com/assets/external/widget.js" type="text/javascript"></script>
-	<script type="text/javascript">Calendly.showBadgeWidget({url: 'https://calendly.com/jake-13', text: 'Book Demo', color: '#5b2883', branding: false});</script>
+	<script type="text/javascript">Calendly.showBadgeWidget({url: 'https://calendly.com/advisor-stream-demo-team', text: 'Book Demo', color: '#5b2883', branding: false});</script>
 	<!-- Calendly badge widget end -->
 
 </head>
@@ -141,7 +141,7 @@
 								</div>
 							</div>
 						</li>
-						<li class="featured"><a onClick="Calendly.showPopupWidget('https://calendly.com/jake-13'); return false;" class="btn btn-sm btn-outline-color">Book Demo</a></li>
+						<li class="featured"><a onClick="Calendly.showPopupWidget('https://calendly.com/advisor-stream-demo-team'); return false;" class="btn btn-sm btn-outline-color">Book Demo</a></li>
 					</ul>
 				</div>
 			</div>
@@ -157,7 +157,7 @@
 					<p class="sub-title">Give us 30 days. We'll get you new leads. </p>
 				</div>
 				<div class="animated" data-animation="fadeInUp" data-duartion="500" data-delay="200">
-					<a onClick="Calendly.showPopupWidget('https://calendly.com/jake-13'); return false;" class="btn btn-outline">Book Demo</a>
+					<a onClick="Calendly.showPopupWidget('https://calendly.com/advisor-stream-demo-team'); return false;" class="btn btn-outline">Book Demo</a>
 				</div>
 			</div>
 		</div>
@@ -216,7 +216,7 @@
 						 </h6>
 						<p class="sub-title"><em>-Mary Street, Financial Advisor</em></p>
 						<br>
-						<a onClick="Calendly.showPopupWidget('https://calendly.com/jake-13'); return false;" class="btn btn-outline-color">Book Demo</a>
+						<a onClick="Calendly.showPopupWidget('https://calendly.com/advisor-stream-demo-team'); return false;" class="btn btn-outline-color">Book Demo</a>
 					</article>
 				</div>
 
@@ -233,7 +233,7 @@
 						This saves me time and money, allowing me to focus on closing new leads.</h6>
 						<p class="sub-title"><em>-Mike Gill, Financial Advisor</em></p>
 						<br>
-						<a onClick="Calendly.showPopupWidget('https://calendly.com/jake-13'); return false;" class="btn btn-outline-color">Book Demo</a>
+						<a onClick="Calendly.showPopupWidget('https://calendly.com/advisor-stream-demo-team'); return false;" class="btn btn-outline-color">Book Demo</a>
 					</article>
 				</div>
 
@@ -253,7 +253,7 @@
 						 </h6>
 						<p class="sub-title"><em>-Joel Acosta, Firm</em></p>
 						<br>
-						<a onClick="Calendly.showPopupWidget('https://calendly.com/jake-13'); return false;" class="btn btn-outline-color">Book Demo</a>
+						<a onClick="Calendly.showPopupWidget('https://calendly.com/advisor-stream-demo-team'); return false;" class="btn btn-outline-color">Book Demo</a>
 					</article>
 				</div>
 			</div>
@@ -546,7 +546,7 @@
 			</div>
 
             <div class="col-md-3 col-lg-3">
-				<a onClick="Calendly.showPopupWidget('https://calendly.com/jake-13'); return false;" class="btn btn-outline" style="margin-top: 7px;">Book Demo</a>
+				<a onClick="Calendly.showPopupWidget('https://calendly.com/advisor-stream-demo-team'); return false;" class="btn btn-outline" style="margin-top: 7px;">Book Demo</a>
             </div>
 		</div>
 	</section>
@@ -560,7 +560,6 @@
                     "Advisors need great marketing tools to break through the noise..."
                     
                 </p>
-                <p>In his igitur partibus duabus nihil erat, quod Zeno commuta rest gestiret. Sed virtutem ipsam inchoavit, nihil<br/> ampliusuma. Scien tiam pollicentur, quam non erat mirum sapientiae lorem cupido patria esse cariorem. Quae<br/> qui non vident, nihilamane umquam magnum ac cognitione. In his rest gestiret. Sed ipsam inchoavit, nihil ampliusuma.<br/> Scien tiam pollicentur, quam non erat mirum sapientiae lorem cupido patria esse cariorem. Quae qui non vident,<br/> nihilamane umquam magnum ac cognitione.</p>
             </div>
 
             <div class="section-content">
