--- a/Startuply_HTML/index-clickthrough.html
+++ b/Startuply_HTML/index-clickthrough.html
@@ -6,8 +6,8 @@
 	<!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=edge"><![endif]-->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
 	<title>Home</title>
-	<meta name="description" content="Startups template">
-	<meta name="keywords" content="Startups template">
+	<meta name="description" content="Advisorstream Splash Page">
+	<meta name="keywords" content="Advisorstream Splash Page">
 	<link rel="shortcut icon" href="assets/img/favicon.ico">
 	<link rel="apple-touch-icon" href="assets/img/apple-touch-icon.jpg">
 	<link rel="apple-touch-icon" sizes="72x72" href="assets/img/apple-touch-icon-72x72.jpg">
