--- a/Startuply_HTML/index-clickthrough.html
+++ b/Startuply_HTML/index-clickthrough.html
@@ -292,7 +292,7 @@
                             <li class="active">
                                 <a href="#cbn" data-toggle="tab">
                                     <div class="tab-info">
-                                        <div class="tab-title">Automated Newsletters</div>
+                                        <div class="tab-title">Email Marketing</div>
                                     </div>
                                     <!--<div class="tab-icon"><span class="icon icon-multimedia-20"></span></div>-->
                                 </a>
@@ -308,7 +308,7 @@
                             <li>
                                 <a href="#opt-in" data-toggle="tab">
                                     <div class="tab-info">
-                                        <div class="tab-title">Email Marketing</div>
+                                        <div class="tab-title">Website Optimization</div>
                                     </div>
                                     <!-- <div class="tab-icon"><span class="icon icon-seo-icons-28"></span></div>-->
                                 </a>
@@ -341,23 +341,23 @@
 
                         <div class="tab-content">
                             <div class="tab-pane in active" id="cbn">
-                                <img src="assets/img/features/rich_features_1.png" class="img-responsive animated" data-duration="900" data-animation="flip3dInTop" alt="macbook" />
+                                <img src="assets/img/features/main_page.png" class="img-responsive animated" data-duration="900" data-animation="flip3dInTop" alt="macbook"/>
                                 <h6>Custom branded quality newsletters automatically sent out weekly to prospects and clients.</h6>
                             </div>
                             <div class="tab-pane" id="social-media">
-                                <img src="assets/img/features/rich_features_2.png" class="img-responsive animated" data-duration="900" data-animation="roll3dInLeft" alt="macbook" />
+                                <img src="assets/img/features/first_financial.png" class="img-responsive animated" data-duration="900" data-animation="roll3dInLeft" alt="macbook" />
                                 <h6> Automatic daily social media posting.</h6>
                             </div>
                             <div class="tab-pane" id="opt-in">
-                                <img src="assets/img/features/rich_features_3.png" class="img-responsive animated" data-duration="900" data-animation="fadeInRight" alt="macbook" />
+                                <img src="assets/img/features/Broussard1.png" class="img-responsive animated" data-duration="900" data-animation="fadeInRight" alt="macbook" style="width: 900px;"/>
                                <h6> Easily send high quality articles. </h6>
                             </div>
                             <div class="tab-pane" id="brand">
-                                <img src="assets/img/features/rich_features_1.png" class="img-responsive animated" data-duration="900" data-animation="flip3dInTop" alt="macbook" />
+                                <img src="assets/img/features/doessier.png" class="img-responsive animated" data-duration="900" data-animation="flip3dInTop" alt="macbook"/>
                                 <h6> Premium, licensed content from the top publishers in the world.  </h6>
                             </div>
                             <div class="tab-pane" id="lead">
-                                <img src="assets/img/features/rich_features_2.png" class="img-responsive animated" data-duration="900" data-animation="roll3dInLeft" alt="macbook" />
+                                <img src="assets/img/features/linked_in.png" class="img-responsive animated" data-duration="900" data-animation="roll3dInLeft" alt="macbook" style="margin-right: -100px;"/>
                                 <h6> Automatically capture new leads with custom opt in an analytics. </h6>
                             </div>
                             <div class="tab-pane" id="content">
